// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`code-generation/dictionary/renderDictionaryKeysFile > renders JSDoc comments before union members 1`] = `
"/* eslint-disable */
// @ts-nocheck
// noinspection JSUnusedGlobalSymbols
// AUTO-GENERATED by @vef-framework-react/dev (vef gen:dictionary-keys). DO NOT EDIT.
// Source: dictionary-keys.config.ts

export type DictionaryKey =
  /** Menu type classification */
  | "sys.menu.type"
  /** Gender of the user */
  | "sys.user.gender";

declare module "@vef-framework-react/hooks" {
  interface Register {
    dictionaryKeys: DictionaryKey;
  }
}
"
`;

exports[`code-generation/dictionary/renderDictionaryKeysFile > renders a never union when no entries are provided 1`] = `
"/* eslint-disable */
// @ts-nocheck
// noinspection JSUnusedGlobalSymbols
// AUTO-GENERATED by @vef-framework-react/dev (vef gen:dictionary-keys). DO NOT EDIT.
// Source: dictionary-keys.config.ts

export type DictionaryKey = never;

declare module "@vef-framework-react/hooks" {
  interface Register {
    dictionaryKeys: DictionaryKey;
  }
}
"
`;

exports[`code-generation/dictionary/renderDictionaryKeysFile > renders a single key without a comment 1`] = `
"/* eslint-disable */
// @ts-nocheck
// noinspection JSUnusedGlobalSymbols
// AUTO-GENERATED by @vef-framework-react/dev (vef gen:dictionary-keys). DO NOT EDIT.
// Source: dictionary-keys.config.ts

export type DictionaryKey =
  | "sys.menu.type";

declare module "@vef-framework-react/hooks" {
  interface Register {
    dictionaryKeys: DictionaryKey;
  }
}
"
`;

exports[`code-generation/dictionary/renderDictionaryKeysFile > renders multiple keys in the order provided 1`] = `
"/* eslint-disable */
// @ts-nocheck
// noinspection JSUnusedGlobalSymbols
// AUTO-GENERATED by @vef-framework-react/dev (vef gen:dictionary-keys). DO NOT EDIT.
// Source: dictionary-keys.config.ts

export type DictionaryKey =
  | "sys.menu.type"
  | "sys.user.gender"
  | "pmrm.project.stage";

declare module "@vef-framework-react/hooks" {
  interface Register {
    dictionaryKeys: DictionaryKey;
  }
}
"
`;
